--- a/rust_port/Cargo.toml
+++ b/rust_port/Cargo.toml
@@ -10,6 +10,8 @@ nalgebra = { version = "0.32", features = ["serde-serialize"] }
 serde_json = "1.0"
 lazy_static = "1.4"
 uuid = "1.10"
+sdl2 = "0.36"
+macroquad = "0.6"
 
 [build-dependencies]
 cc = "1.0"
