--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ Cargo.lock
 /docs/
 
 # Project-specific paths
-rust_port/target/
+rust_port/target/*
+rust_port/target/debug/*
 rust_port/Cargo.lock
 rust_port/target/.rustc_info.json
