--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.98"
+lazy_static = "1.5.0"
+log = "0.4.27"
 rand = "0.9.1"
 regex = "1.11.1"
+serde = "1.0.219"
 tokio = "1.45.0"
