Refactors codebase for improved structure
This commit restructures the project by moving modules to more appropriate locations,
reorganizing crate structure, and renaming crates to better reflect their purpose.
This improves project organization and maintainability.
Additionally, it adds new `context` and `multiplayer` crates,
integrates `serde` for serialization/deserialization in the combat crate,
and introduces new modules for attack types and barbarians to the faction crate.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [workspace]
-members = [ "ai", "automation", "barbarians", "battle", "city", "faction", "diplomacy", "espionage", "map", "mods", "multiplayer", "rules", "simulation", "trade", "ui", "units", "util", "encyclopedia", "graphics", "sound", "server", "translation"]
+members = [ "ai", "combat", "city", "faction", "diplomacy", "espionage", "map", "mods", "multiplayer", "rules", "simulation", "trade", "ui", "units", "util", "encyclopedia", "graphics", "sound", "translation", "context"]
 
 [package]
 name = "unciv"
 version = "0.1.0"
 resolver = "3"
+edition = "2024"
 
 [[bin]]
 name = "unciv"
