--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "ui"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
-ggez = "0.9.3"
-tracing = "0.1"
+ggez = "^0.9"
+tracing = "^0.1"
+ggez-egui = "^0.3"
+egui = "^0.31"
+egui_extras = "^0.31"
+egui_glium = "^0.31"
+uuid = { version = "1.3.4", features = ["v7"] }
+rules = { path = "../rules" }
